// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен вырезать UNKNOWN_SEGMENT (Неизвестно), если ни в одной из гистограм нет процентов в этой группе 1`] = `
Object {
  "female_histogram": Object {
    "groups": Array [
      Object {
        "label": "10%",
        "name": "18 – 24 лет",
        "value": 10,
      },
      Object {
        "label": "15%",
        "name": "25 – 34",
        "value": 15,
      },
      Object {
        "label": "10%",
        "name": "35 – 44",
        "value": 10,
      },
      Object {
        "label": "15%",
        "name": "45 – 54",
        "value": 15,
      },
      Object {
        "label": "0%",
        "name": "55 и старше",
        "value": 0,
      },
    ],
    "total_count": 45,
  },
  "male_histogram": Object {
    "groups": Array [
      Object {
        "label": "10%",
        "name": "18 – 24 лет",
        "value": 10,
      },
      Object {
        "label": "15%",
        "name": "25 – 34",
        "value": 15,
      },
      Object {
        "label": "10%",
        "name": "35 – 44",
        "value": 10,
      },
      Object {
        "label": "15%",
        "name": "45 – 54",
        "value": 15,
      },
      Object {
        "label": "0%",
        "name": "55 и старше",
        "value": 0,
      },
    ],
    "total_count": 125,
  },
}
`;

exports[`должен правильно маппить и селектить группы в гистограммах 1`] = `
Object {
  "female_histogram": Object {
    "groups": Array [
      Object {
        "label": "10%",
        "name": "18 – 24 лет",
        "value": 10,
      },
      Object {
        "label": "15%",
        "name": "25 – 34",
        "value": 15,
      },
      Object {
        "label": "10%",
        "name": "35 – 44",
        "value": 10,
      },
      Object {
        "label": "15%",
        "name": "45 – 54",
        "value": 15,
      },
      Object {
        "label": "0%",
        "name": "55 и старше",
        "value": 0,
      },
      Object {
        "label": "50%",
        "name": "Неизвестно",
        "value": 50,
      },
    ],
    "total_count": 45,
  },
  "male_histogram": Object {
    "groups": Array [
      Object {
        "label": "10%",
        "name": "18 – 24 лет",
        "value": 10,
      },
      Object {
        "label": "15%",
        "name": "25 – 34",
        "value": 15,
      },
      Object {
        "label": "10%",
        "name": "35 – 44",
        "value": 10,
      },
      Object {
        "label": "15%",
        "name": "45 – 54",
        "value": 15,
      },
      Object {
        "label": "0%",
        "name": "55 и старше",
        "value": 0,
      },
      Object {
        "label": "50%",
        "name": "Неизвестно",
        "value": 50,
      },
    ],
    "total_count": 125,
  },
}
`;
